Add management endpoint for single template
